fix for menu aspect ratio on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -589,10 +589,17 @@ aside #topmenu ul li span {
 	}
 }
 
+@media only screen and (max-width:37.5rem) {
+	aside nav ul {
+		padding: 10px 0 0 10px;
+		float: left;
+		margin-right: 80px;
+	}
+}
+
 aside nav ul {
 	padding: 10px 0 0 10px;
 	float: left;
-	margin-right: 80px;
 }
 
 aside nav ul .counter-menu {
